2016-05-01  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh.md (push, pop, ic_invalidate_line, cstoresi4, cstoredi4,
	cstoresf4, cstoredf4, fix_truncsfsi2): Remove constraints.

2016-05-01  Eric Botcazou  <ebotcazou@adacore.com>

	* config/rs6000/rs6000.c (altivec_expand_lv_builtin): Do not use switch
	statement on instruction code.  Remove trailing spaces.
	(altivec_expand_stv_builtin): Likewise.

2016-05-01  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh.h (TARGET_SH4): Remove and use default implementation.
	(TARGET_FPU_DOUBLE): Simplify.
	(BASE_ARG_REG, DOUBLE_TYPE_SIZE, OPTIMIZE_MODE_SWITCHING): Replace
	'TARGET_SH4 || TARGET_SH2A_DOUBLE' conditions with 'TARGET_FPU_DOUBLE'.
	* config/sh/sh.c: Replace 'TARGET_SH4 || TARGET_SH2A_DOUBLE' conditions
	with 'TARGET_FPU_DOUBLE'.
	* config/sh/sh.md: Likewise.

2016-05-01  Yoshinori Sato  <ysato@users.sourceforge.jp>

	* config/sh/linux.h (SH_DIV_STRATEGY_DEFAULT,
	SH_DIV_STR_FOR_SIZE): Remove.
	* config/sh/netbsd-elf.h (SH_DIV_STRATEGY_DEFAULT,
	SH_DIV_STR_FOR_SIZE): Remove.

2016-05-01  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/predicates.md (any_register_operand, zero_extend_operand,
	logical_reg_operand): Delete.
	(arith_operand, arith_reg_dest, arith_or_int_operand, cmpsi_operand,
	arith_reg_or_0_operand, arith_reg_or_0_or_1_operand, logical_operand,
	logical_and_operand, movsrc_no_disp_mem_operand): Rewrite using
	match_operand and match_test.
	(sh_const_vec, sh_1el_vec): Remove redundant checks.  Declare local
	variables on their first use.  Return bool values.
	* config/sh/sh.h (LOAD_EXTEND_OP): Update comment.
	* config/sh/sh.md (andsi3, iorsi3): Use arith_reg_dest for result and
	arith_reg_operand for input operand.  Remove empty constraints.
	(xorsi3): Delete.
	(*xorsi3_compact): Rename to xorsi3.
	(zero_extend<mode>si2): Use arith_reg_operand for input operand.
	(*zero_extend<mode>si2_disp_mem): Update comment.
	(mov_nop): Delete.

2016-04-30  Oleg Endo  <olegendo@gcc.gnu.org>
